--- a/kontakt.html
+++ b/kontakt.html
@@ -4,93 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontakt - Baltic Digital Institute</title>
-  <link href="dist/output.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <style> body { font-family: 'Lato', sans-serif; } </style>
 </head>
-<body class="antialiased bg-baltic-navy text-white font-sans">
-
-  <!-- HEADER -->
-  <header class="bg-dark-steel shadow-md fixed w-full z-20">
-    <div class="max-w-7xl mx-auto px-6 flex justify-between items-center h-16">
-      <a href="index.html" class="flex items-center font-heading text-white text-2xl font-bold">BDi</a>
-      <nav class="hidden md:flex space-x-8 items-center">
-        <a href="rozwiazania.html" class="hover:text-cyber-turq transition">Rozwiązania</a>
-        <a href="o-nas.html" class="hover:text-cyber-turq transition">O Nas</a>
-        <a href="kontakt.html" class="text-cyber-turq">Kontakt</a>
-      </nav>
-      <!-- Hamburger -->
-      <div class="md:hidden">
-        <button id="menu-button" class="relative w-8 h-8 flex flex-col justify-between items-center group">
-          <span class="block h-1 w-full bg-white rounded transition"></span>
-          <span class="block h-1 w-full bg-white rounded transition"></span>
-          <span class="block h-1 w-full bg-white rounded transition"></span>
-        </button>
-      </div>
-    </div>
-    <!-- MOBILE MENU -->
-    <div id="mobile-menu" class="overflow-hidden max-h-0 opacity-0 transition-all duration-500 ease-in-out md:hidden bg-dark-steel">
-      <a href="rozwiazania.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">Rozwiązania</a>
-      <a href="o-nas.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">O Nas</a>
-      <a href="kontakt.html" class="block px-6 py-3 text-cyber-turq font-bold">Kontakt</a>
-    </div>
+<body class="bg-[#0A192F] text-white">
+  <!-- Header -->
+  <header class="bg-[#0A192F] fixed w-full z-50">
+    <nav class="container mx-auto flex justify-between items-center p-4">
+      <a href="index.html" class="text-xl font-bold text-[#00F6D2]">BDI</a>
+      <button id="menu-btn" class="block md:hidden text-white focus:outline-none">☰</button>
+      <ul id="menu" class="hidden md:flex space-x-6">
+        <li><a href="index.html" class="hover:text-[#00F6D2]">Start</a></li>
+        <li><a href="o-nas.html" class="hover:text-[#00F6D2]">O nas</a></li>
+        <li><a href="rozwiazania.html" class="hover:text-[#00F6D2]">Rozwiązania</a></li>
+        <li><a href="kontakt.html" class="hover:text-[#00F6D2]">Kontakt</a></li>
+      </ul>
+    </nav>
+    <ul id="mobile-menu" class="md:hidden hidden flex-col bg-[#1F2937]">
+      <li><a href="index.html" class="block px-4 py-2">Start</a></li>
+      <li><a href="o-nas.html" class="block px-4 py-2">O nas</a></li>
+      <li><a href="rozwiazania.html" class="block px-4 py-2">Rozwiązania</a></li>
+      <li><a href="kontakt.html" class="block px-4 py-2">Kontakt</a></li>
+    </ul>
   </header>
 
-  <!-- MAIN -->
-  <main class="pt-24 container mx-auto px-6">
-    <section class="text-center max-w-4xl mx-auto mb-20">
-      <h1 class="font-heading text-4xl md:text-5xl font-black">Skontaktuj się z Nami</h1>
-      <p class="mt-6 text-lg text-steel-gray">Jesteśmy gotowi, aby omówić, jak możemy wesprzeć Twoją organizację.</p>
-    </section>
-
-    <section class="grid md:grid-cols-2 gap-16 max-w-5xl mx-auto">
-      <!-- Dane kontaktowe -->
-      <div class="bg-dark-steel p-8 rounded-lg">
-        <h2 class="font-heading text-2xl font-bold mb-6">Dane Kontaktowe</h2>
-        <div class="space-y-4 text-steel-gray">
-          <p><strong class="text-white">Adres:</strong><br>ul. Hołdu Pruskiego 6<br>80-322 Gdańsk, Polska</p>
-          <p><strong class="text-white">E-mail:</strong><br><a href="mailto:office@baltic-digital.org" class="hover:text-cyber-turq">office@baltic-digital.org</a></p>
-        </div>
-      </div>
-      <!-- Formularz -->
-      <div>
-        <form action="#" method="POST" class="space-y-6">
-          <div>
-            <label for="name" class="block text-sm text-steel-gray">Imię i Nazwisko</label>
-            <input id="name" name="name" type="text" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md focus:ring-cyber-turq focus:border-cyber-turq">
-          </div>
-          <div>
-            <label for="email" class="block text-sm text-steel-gray">E-mail</label>
-            <input id="email" name="email" type="email" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md focus:ring-cyber-turq focus:border-cyber-turq">
-          </div>
-          <div>
-            <label for="message" class="block text-sm text-steel-gray">Wiadomość</label>
-            <textarea id="message" name="message" rows="4" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md focus:ring-cyber-turq focus:border-cyber-turq"></textarea>
-          </div>
-          <div class="text-xs text-steel-gray">
-            Wysyłając wiadomość wyrażasz zgodę na przetwarzanie danych zgodnie z naszą polityką RODO.
-          </div>
-          <button type="submit" class="w-full bg-cyber-turq text-baltic-navy font-bold py-3 px-6 rounded-md text-lg hover:opacity-90 transition">
-            Wyślij
-          </button>
-        </form>
-      </div>
-    </section>
+  <!-- Content -->
+  <main class="pt-24 container mx-auto px-4">
+    <h1 class="text-3xl font-bold mb-6">Kontakt</h1>
+    <p class="text-gray-300 mb-4">Skontaktuj się z nami, aby porozmawiać o współpracy:</p>
+    <form class="bg-[#1F2937] p-6 rounded-lg space-y-4 max-w-lg">
+      <input type="text" placeholder="Imię i nazwisko" class="w-full p-3 rounded bg-gray-800 text-white">
+      <input type="email" placeholder="Adres e-mail" class="w-full p-3 rounded bg-gray-800 text-white">
+      <textarea placeholder="Wiadomość" class="w-full p-3 rounded bg-gray-800 text-white"></textarea>
+      <button type="submit" class="bg-[#00F6D2] text-black px-6 py-3 rounded-lg font-bold">Wyślij</button>
+    </form>
+    <p class="text-xs text-gray-400 mt-4">Twoje dane będą przetwarzane zgodnie z RODO.</p>
   </main>
 
-  <!-- FOOTER -->
-  <footer class="bg-dark-steel mt-20">
-    <div class="max-w-7xl mx-auto px-6 py-12 text-center text-steel-gray text-sm">
-      <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
-    </div>
+  <!-- Footer -->
+  <footer class="bg-[#1F2937] text-center py-4 mt-10">
+    <p class="text-gray-400 text-sm">© 2025 Baltic Digital Institute</p>
   </footer>
 
   <script>
-    const menuButton = document.getElementById("menu-button");
+    const menuBtn = document.getElementById("menu-btn");
     const mobileMenu = document.getElementById("mobile-menu");
-    menuButton.addEventListener("click", () => {
-      mobileMenu.classList.toggle("max-h-96");
-      mobileMenu.classList.toggle("opacity-100");
-      menuButton.classList.toggle("open");
+    menuBtn.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
     });
   </script>
-  <style>
-    #menu-button.open span:nth-child(1) { transform: rotate(45deg) translate
+</body>
+</html>
