--- a/index.html
+++ b/index.html
@@ -1,54 +1,85 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Baltic Digital Institute</title>
+
+  <!-- Tailwind CDN (tymczasowo) -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Font Lato -->
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Lato', sans-serif; } </style>
+  <style>body{font-family:'Lato',sans-serif}</style>
 </head>
-<body class="bg-[#0A192F] text-white">
-  <!-- Header -->
+<body class="bg-[#0A192F] text-white min-h-screen">
+
+  <!-- HEADER -->
   <header class="bg-[#0A192F] fixed w-full z-50">
-    <nav class="container mx-auto flex justify-between items-center p-4">
+    <nav class="max-w-6xl mx-auto flex items-center justify-between p-4">
       <a href="index.html" class="text-xl font-bold text-[#00F6D2]">BDI</a>
-      <button id="menu-btn" class="block md:hidden text-white focus:outline-none">
-        ☰
-      </button>
-      <ul id="menu" class="hidden md:flex space-x-6">
+
+      <ul class="hidden md:flex space-x-6">
         <li><a href="index.html" class="hover:text-[#00F6D2]">Start</a></li>
         <li><a href="o-nas.html" class="hover:text-[#00F6D2]">O nas</a></li>
         <li><a href="rozwiazania.html" class="hover:text-[#00F6D2]">Rozwiązania</a></li>
         <li><a href="kontakt.html" class="hover:text-[#00F6D2]">Kontakt</a></li>
       </ul>
+
+      <button id="menu-btn" class="md:hidden text-2xl" aria-label="menu">☰</button>
     </nav>
-    <ul id="mobile-menu" class="md:hidden hidden flex-col bg-[#1F2937]">
-      <li><a href="index.html" class="block px-4 py-2">Start</a></li>
-      <li><a href="o-nas.html" class="block px-4 py-2">O nas</a></li>
-      <li><a href="rozwiazania.html" class="block px-4 py-2">Rozwiązania</a></li>
-      <li><a href="kontakt.html" class="block px-4 py-2">Kontakt</a></li>
-    </ul>
+
+    <!-- mobile menu -->
+    <div id="mobile-menu" class="hidden md:hidden bg-[#1F2937]">
+      <a class="block px-4 py-3" href="index.html">Start</a>
+      <a class="block px-4 py-3" href="o-nas.html">O nas</a>
+      <a class="block px-4 py-3" href="rozwiazania.html">Rozwiązania</a>
+      <a class="block px-4 py-3" href="kontakt.html">Kontakt</a>
+    </div>
   </header>
 
-  <!-- Hero -->
-  <section class="pt-24 text-center py-20 bg-[#0A192F]">
-    <h1 class="text-4xl font-bold mb-4">Baltic Digital Institute</h1>
-    <p class="text-lg text-gray-300 mb-6">AI, Cyberbezpieczeństwo, Innowacje</p>
-    <a href="o-nas.html" class="bg-[#00F6D2] text-black px-6 py-3 rounded-lg font-bold">Poznaj nas</a>
-  </section>
+  <!-- HERO -->
+  <main class="pt-24">
+    <section class="text-center py-20">
+      <div class="max-w-3xl mx-auto px-4">
+        <h1 class="text-4xl md:text-5xl font-bold mb-4">Baltic Digital Institute</h1>
+        <p class="text-gray-300 mb-6">AI, Cyberbezpieczeństwo i Innowacje dla organizacji.</p>
+        <div class="flex justify-center gap-4">
+          <a href="rozwiazania.html" class="bg-[#00F6D2] text-black px-6 py-3 rounded font-bold">Nasze rozwiązania</a>
+          <a href="o-nas.html" class="border border-[#00F6D2] px-6 py-3 rounded text-[#00F6D2]">O nas</a>
+        </div>
+      </div>
+    </section>
 
-  <!-- Footer -->
-  <footer class="bg-[#1F2937] text-center py-4 mt-10">
+    <!-- szybki przegląd 3 filarów -->
+    <section class="py-16 max-w-6xl mx-auto px-4">
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-[#1F2937] p-6 rounded-lg">
+          <h3 class="text-xl font-bold text-[#00F6D2] mb-2">AI dla Biznesu</h3>
+          <p class="text-gray-300">Automatyzacja, predykcja i inteligentne wsparcie decyzji.</p>
+        </div>
+        <div class="bg-[#1F2937] p-6 rounded-lg">
+          <h3 class="text-xl font-bold text-[#00F6D2] mb-2">Cyberbezpieczeństwo</h3>
+          <p class="text-gray-300">Ochrona systemów, audyty i monitoring.</p>
+        </div>
+        <div class="bg-[#1F2937] p-6 rounded-lg">
+          <h3 class="text-xl font-bold text-[#00F6D2] mb-2">Edukacja</h3>
+          <p class="text-gray-300">Szkolenia i programy rozwoju kompetencji cyfrowych.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="bg-[#1F2937] text-center py-6 mt-12">
     <p class="text-gray-400 text-sm">© 2025 Baltic Digital Institute</p>
   </footer>
 
   <script>
-    const menuBtn = document.getElementById("menu-btn");
-    const mobileMenu = document.getElementById("mobile-menu");
-    menuBtn.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
+    // prosty mobile menu toggle
+    const btn = document.getElementById('menu-btn');
+    const mobile = document.getElementById('mobile-menu');
+    btn.addEventListener('click', () => mobile.classList.toggle('hidden'));
   </script>
 </body>
 </html>
