--- a/o-nas.html
+++ b/o-nas.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>O nas - Baltic Digital Institute</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>O nas — Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Lato', sans-serif; } </style>
+  <style>body{font-family:'Lato',sans-serif}</style>
 </head>
-<body class="bg-[#0A192F] text-white">
-  <!-- Header -->
+<body class="bg-[#0A192F] text-white min-h-screen">
   <header class="bg-[#0A192F] fixed w-full z-50">
-    <nav class="container mx-auto flex justify-between items-center p-4">
+    <nav class="max-w-6xl mx-auto flex items-center justify-between p-4">
       <a href="index.html" class="text-xl font-bold text-[#00F6D2]">BDI</a>
-      <button id="menu-btn" class="block md:hidden text-white focus:outline-none">☰</button>
-      <ul id="menu" class="hidden md:flex space-x-6">
+      <ul class="hidden md:flex space-x-6">
         <li><a href="index.html" class="hover:text-[#00F6D2]">Start</a></li>
         <li><a href="o-nas.html" class="hover:text-[#00F6D2]">O nas</a></li>
         <li><a href="rozwiazania.html" class="hover:text-[#00F6D2]">Rozwiązania</a></li>
         <li><a href="kontakt.html" class="hover:text-[#00F6D2]">Kontakt</a></li>
       </ul>
+      <button id="menu-btn" class="md:hidden text-2xl">☰</button>
     </nav>
-    <ul id="mobile-menu" class="md:hidden hidden flex-col bg-[#1F2937]">
-      <li><a href="index.html" class="block px-4 py-2">Start</a></li>
-      <li><a href="o-nas.html" class="block px-4 py-2">O nas</a></li>
-      <li><a href="rozwiazania.html" class="block px-4 py-2">Rozwiązania</a></li>
-      <li><a href="kontakt.html" class="block px-4 py-2">Kontakt</a></li>
-    </ul>
+    <div id="mobile-menu" class="hidden md:hidden bg-[#1F2937]">
+      <a class="block px-4 py-3" href="index.html">Start</a>
+      <a class="block px-4 py-3" href="o-nas.html">O nas</a>
+      <a class="block px-4 py-3" href="rozwiazania.html">Rozwiązania</a>
+      <a class="block px-4 py-3" href="kontakt.html">Kontakt</a>
+    </div>
   </header>
 
-  <!-- Content -->
-  <main class="pt-24 container mx-auto px-4">
-    <h1 class="text-3xl font-bold mb-6">O nas</h1>
+  <main class="pt-24 max-w-4xl mx-auto px-4 py-16">
+    <h1 class="text-3xl font-bold mb-4">O nas</h1>
     <p class="text-gray-300 mb-4">Baltic Digital Institute to centrum innowacji w obszarze sztucznej inteligencji i cyberbezpieczeństwa.</p>
-    <p class="text-gray-300 mb-4">Naszą misją jest tworzenie rozwiązań, które realnie wzmacniają bezpieczeństwo cyfrowe i rozwój biznesu.</p>
-    <p class="text-gray-300">Wartości: profesjonalizm, przejrzystość, innowacyjność.</p>
+    <p class="text-gray-300">Naszą misją jest tworzenie rozwiązań, które realnie wzmacniają bezpieczeństwo cyfrowe i rozwój biznesu.</p>
   </main>
 
-  <!-- Footer -->
-  <footer class="bg-[#1F2937] text-center py-4 mt-10">
+  <footer class="bg-[#1F2937] text-center py-6 mt-12">
     <p class="text-gray-400 text-sm">© 2025 Baltic Digital Institute</p>
   </footer>
 
   <script>
-    const menuBtn = document.getElementById("menu-btn");
-    const mobileMenu = document.getElementById("mobile-menu");
-    menuBtn.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
+    const btn = document.getElementById('menu-btn');
+    const mobile = document.getElementById('mobile-menu');
+    btn.addEventListener('click', () => mobile.classList.toggle('hidden'));
   </script>
 </body>
 </html>
