--- a/index.html
+++ b/index.html
@@ -43,26 +43,65 @@
   </div>
 
   <!-- HERO -->
-  <section class="relative h-screen flex items-center justify-center text-center">
-    <img src="assets/img/Architekci cyfrowej odporności.png" alt="Hero Background" class="absolute inset-0 w-full h-full object-cover opacity-30">
-    <div class="relative z-10 max-w-2xl mx-auto px-4">
-      <h1 class="text-4xl md:text-6xl font-bold mb-6">Architekci Cyfrowej Odporności</h1>
-      <p class="text-lg md:text-xl text-gray-200 mb-8">
-        Baltic Digital Institute – Twoi partnerzy w AI, cyberbezpieczeństwie i cyfrowej transformacji.
+  <section class="relative h-screen flex flex-col items-center justify-center text-center bg-cover bg-center" style="background-image: url('assets/img/Architekci cyfrowej odporności.png');">
+    <div class="absolute inset-0 bg-black/70"></div>
+    <div class="relative z-10 px-6">
+      <h1 class="text-4xl md:text-6xl font-bold mb-6">Architekci cyfrowej odporności</h1>
+      <p class="text-lg md:text-xl text-gray-300 max-w-2xl mx-auto mb-8">
+        Tworzymy przyszłość, w której sztuczna inteligencja i cyberbezpieczeństwo służą rozwojowi społeczeństwa i gospodarki.
       </p>
-      <a href="kontakt.html" class="inline-block bg-[#64FFDA] text-[#0A192F] font-semibold px-6 py-3 rounded-lg shadow-lg hover:bg-[#52e3c2] transition">
+      <a href="kontakt.html" class="px-8 py-4 bg-[#64FFDA] text-[#0A192F] font-bold rounded-md shadow-lg hover:bg-[#52e0c5] transition">
         Skontaktuj się z nami
       </a>
     </div>
   </section>
 
-  <!-- O NAS (placeholder) -->
-  <section class="py-20 bg-[#0A192F] text-center px-6">
-    <h2 class="text-3xl font-bold mb-6">Kim jesteśmy?</h2>
-    <p class="max-w-3xl mx-auto text-gray-300 leading-relaxed">
-      Baltic Digital Institute to organizacja non-profit, która łączy naukę, biznes i sektor publiczny. Naszą misją jest
-      budowanie cyfrowej odporności Europy poprzez rozwój sztucznej inteligencji, cyberbezpieczeństwa i odpowiedzialnej transformacji cyfrowej.
+  <!-- FILARY -->
+  <section class="py-20 px-6 bg-[#0F2238] text-center">
+    <h2 class="text-3xl font-bold mb-12 text-[#64FFDA]">Nasze filary</h2>
+    <div class="grid md:grid-cols-3 gap-10 max-w-6xl mx-auto">
+      <div class="p-6 bg-[#0A192F] rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-4">Sztuczna Inteligencja</h3>
+        <p class="text-gray-300 text-sm">
+          Opracowujemy i wdrażamy rozwiązania AI, które wspierają biznes, sektor publiczny i społeczeństwo.
+        </p>
+      </div>
+      <div class="p-6 bg-[#0A192F] rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-4">Cyberbezpieczeństwo</h3>
+        <p class="text-gray-300 text-sm">
+          Budujemy odporność cyfrową organizacji i chronimy krytyczne dane przed zagrożeniami.
+        </p>
+      </div>
+      <div class="p-6 bg-[#0A192F] rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-4">Edukacja i Transformacja</h3>
+        <p class="text-gray-300 text-sm">
+          Prowadzimy programy edukacyjne i doradcze, wspierając świadomą transformację cyfrową.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- SOCIAL PROOF -->
+  <section class="py-16 px-6 bg-[#0A192F] text-center">
+    <h2 class="text-3xl font-bold mb-8 text-[#64FFDA]">Nasi partnerzy</h2>
+    <div class="flex flex-wrap justify-center gap-8 grayscale opacity-80">
+      <img src="assets/img/partner1.png" alt="Partner 1" class="h-12">
+      <img src="assets/img/partner2.png" alt="Partner 2" class="h-12">
+      <img src="assets/img/partner3.png" alt="Partner 3" class="h-12">
+      <img src="assets/img/partner4.png" alt="Partner 4" class="h-12">
+    </div>
+  </section>
+
+  <!-- ABOUT PREVIEW -->
+  <section class="py-20 px-6 bg-[#0F2238] text-center">
+    <h2 class="text-3xl font-bold mb-6 text-[#64FFDA]">Poznaj naszą historię</h2>
+    <p class="max-w-3xl mx-auto text-gray-300 leading-relaxed mb-8">
+      Baltic Digital Institute to ośrodek badawczo-doradczy, który łączy naukę, biznes i sektor publiczny. 
+      Działamy na styku technologii, bezpieczeństwa i odpowiedzialnej innowacji.
     </p>
+    <a href="o-nas.html" class="px-6 py-3 border border-[#64FFDA] text-[#64FFDA] rounded-md hover:bg-[#64FFDA] hover:text-[#0A192F] transition">
+      Dowiedz się więcej
+    </a>
   </section>
 
   <!-- FOOTER -->
